// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SET_NODE_ATTRIBUTES adds node attributes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": Object {
      "1": Object {
        "indSMALLHOLDER_DOMINANCE": Object {
          "attribute_id": "SMALLHOLDER_DOMINANCE",
          "attribute_type": "ind",
          "node_id": 1,
        },
        "quantSOY_DEFORESTATION": Object {
          "attribute_id": "SOY_DEFORESTATION",
          "attribute_type": "quant",
          "node_id": 1,
        },
      },
      "2": Object {
        "indSMALLHOLDER_DOMINANCE": Object {
          "attribute_id": "SMALLHOLDER_DOMINANCE",
          "attribute_type": "ind",
          "node_id": 2,
        },
      },
      "3": Object {
        "indSMALLHOLDER_DOMINANCE": Object {
          "attribute_id": "SMALLHOLDER_DOMINANCE",
          "attribute_type": "ind",
          "node_id": 3,
        },
      },
    },
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;

exports[`SET_NODE_ATTRIBUTES removes node attributes 1`] = `
Object {
  "currentQuant": null,
  "data": Object {
    "columns": null,
    "links": null,
    "nodeAttributes": null,
    "nodeHeights": null,
    "nodes": null,
    "nodesByColumnGeoId": null,
  },
  "detailedView": false,
  "expandedNodesIds": Array [],
  "flowsLoading": false,
  "forcedOverview": false,
  "highlightedNodeId": null,
  "isSearchOpen": false,
  "noLinksFound": false,
  "selectedBiomeFilterName": null,
  "selectedColumnsIds": null,
  "selectedNodesIds": Array [],
  "selectedRecolorByName": null,
  "selectedResizeByName": null,
}
`;
